tdf#167849: don't release embedded fonts in WinSalGraphics::ClearDevFontCache

Commit 8e63934c398dd5065f3589c8a7d1b3008f5514d1 (WIN separate LO shared and
embedded fonts, 2019-07-05) made the call only release embedded fonts, not
all temporary fonts. But embedded fonts must not be released there, too:
they are not re-added back by anything. Therefore, any reload of font data
drops all open documents' embedded fonts: this could be opening another
document with embedded font, or a user installing a font in their system.

Clearing embedded fonts itself could be a useful operation, performed when
a document ownong the font is closed. But that must be implemented properly
for all platforms, counting references for each such font; additionally, it
could handle restricted fonts correctly, not showing them in font list.

Change-Id: I239f15cef64c94522e70e17e295b572664317bfc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189100
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>