vcl/win/app/salinst.cxx
@@ -272,8 +272,7 @@ SalData::SalData()
     mbObjClassInit = false;     // is SALOBJECTCLASS initialised
     mnAppThreadId = 0;          // Id from Application-Thread
     mpFirstIcon = nullptr;      // icon cache, points to first icon, NULL if none
-    mpSharedTempFontItem = nullptr;
-    mpOtherTempFontItem = nullptr;
+    mpTempFontItem = nullptr;
     mbThemeChanged = false;     // true if visual theme was changed: throw away theme handles
     mbThemeMenuSupport = false;
 
